@@ -202,6 +202,11 @@ static data_for_each_cmd_t _foreach_update_qos(data_t *data, void *arg)
 
 	qos = xmalloc(sizeof(slurmdb_qos_rec_t));
 	slurmdb_init_qos_rec(qos, false, NO_VAL);
+	/*
+	 * Clear the QOS_FLAG_NOTSET by slurmdb_init_qos_rec() so that
+	 * flag updates won't be ignored.
+	 */
+	qos->flags = 0;
 
 	/* force to off instead of NO_VAL */
 	qos->preempt_mode = PREEMPT_MODE_OFF;
